@@ -236,14 +236,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     _Storage _M_storage;
 
     template<typename _Tp>
-      friend void* __any_caster(const any* __any)
-      {
-	if (__any->_M_manager != &_Manager<decay_t<_Tp>>::_S_manage)
-	  return nullptr;
-	_Arg __arg;
-	__any->_M_manager(_Op_access, __any, &__arg);
-	return __arg._M_obj;
-      }
+      friend void* __any_caster(const any* __any);
 
     // Manage in-place contained object.
     template<typename _Tp>
@@ -346,6 +339,19 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       __throw_bad_any_cast();
     }
   // @}
+
+  template<typename _Tp>
+    void* __any_caster(const any* __any)
+    {
+      struct _None { };
+      using _Up = decay_t<_Tp>;
+      using _Vp = conditional_t<is_copy_constructible<_Up>::value, _Up, _None>;
+      if (__any->_M_manager != &any::_Manager<_Vp>::_S_manage)
+	return nullptr;
+      any::_Arg __arg;
+      __any->_M_manager(any::_Op_access, __any, &__arg);
+      return __arg._M_obj;
+    }
 
   /**
    * @brief Access the contained object.
